# CircAdaptUI

./: .gitignore  .gitmodules  CMakeLists.txt  CircAdaptUI.pro  CircAdaptUI.pro.orig  README.md  buffer.cpp  buffer.h  config.json  cpp_graph.pro  graphcontainer.cpp  graphcontainer.cpp.orig  graphcontainer.h  graphcontainer.h.orig  graphgrid.cpp  graphgrid.h  loopgraph.cpp  loopsignal.cpp  loopsignal.h  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.h  mainwindow.h.orig  mainwindow.ui  mainwindow.ui.orig  modelwrapper.cpp  modelwrapper.cpp.orig  modelwrapper.h  modelwrapper.h.orig  pvloopgraph.cpp  pvloopgraph.h  qcustomplot.cpp  qcustomplot.cpp.orig  settings.h  signal.cpp  signal.h  signalgraph.cpp  signalgraph.h  timesignal.cpp  timesignal.h
CircAdaptUI/: beatdata.cpp  beatdata.h  buffer.cpp  buffer.h  circadaptui.cpp  circadaptui.h  datacontainer.cpp  datacontainer.h  graphcontainer.cpp  graphcontainer.h  graphgrid.cpp  graphgrid.h  linemarker.cpp  linemarker.h  loopgraph.cpp  loopgraph.h  loopmarker.cpp  loopmarker.h  loopsignal.cpp  loopsignal.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelgraphicsscene.cpp  modelgraphicsscene.h  modelgraphicsview.cpp  modelgraphicsview.h  modelwrapper.cpp  modelwrapper.h  paramviewdockwidget.cpp  paramviewdockwidget.h  paramviewdockwidget.ui  propertybrowserbase.cpp  propertybrowserbase.h  settings.cpp  settings.h  signalgraph.cpp  signalgraph.h  systempropertybrowser.cpp  (+5 more)
CircAdaptUI/Graphs/: loopgraph.cpp  loopgraph.h  mmode.cpp  mmode.h  signalgraph.cpp  signalgraph.h
CircAdaptUI/PropertyBrowser/: circpropertybrowser.cpp  circpropertybrowser.h  customeditorfactory.cpp  customeditorfactory.h  custompropertymanager.cpp  custompropertymanager.h  propertybrowserbase.cpp  propertybrowserbase.h  propertyfactory.cpp  propertyfactory.h  propertymanager.cpp  propertymanager.h  resbutton.cpp  resbutton.h  resetbutton.cpp  resetbutton.h  systempropertybrowser.cpp  systempropertybrowser.h
CircAdaptUI/SVGviews/: drawingelementgroup.cpp  drawingelementgroup.h  svgheartobject.cpp  svgheartobject.h  svgobjectbase.cpp  svgobjectbase.h  svgtissueobject.cpp  svgtissueobject.h  svgtorsoobject.cpp  svgtorsoobject.h  togglebuttongroup.cpp  togglebuttongroup.h
CircAdaptUI/SVGviews/DrawingElements/: graphicelement.cpp  graphicelement.h  leftatrium.cpp  leftatrium.h  leftventricle.cpp  leftventricle.h  leftventricle2.cpp  leftventricle2.h  rightatrium.cpp  rightatrium.h  rightventricle.cpp  rightventricle.h  rightventricle2.cpp  rightventricle2.h  septum.cpp  septum.h  septum2.cpp  septum2.h  shuntelement.cpp  shuntelement.h  textcircle.cpp  textcircle.h  valve.cpp  valve.h  valveelement.cpp  valveelement.h
CircAdaptUI/Signals/: loopsignal.cpp  loopsignal.h  signalinterface.h  timesignal.cpp  timesignal.h
CircAdaptUI/Widgets/: graphgrid.cpp  graphgrid.h  graphicwidget.cpp  graphicwidget.h  modelgraphicsview.cpp  modelgraphicsview.h  paramviewdockwidget.cpp  paramviewdockwidget.h  paramviewdockwidget.ui  valueview.cpp  valueview.h  viewtypes.h
Resources/: default.CircAdaptcase  pcircadapt.rc  resources.qrc
Resources/icons/: CADoc.icns  CAUpdate.icns  Heart.emf  circadapt.icns
Resources/style/: CircAdapt.qss
dependencies/: qcustomplot.cpp  qcustomplot.h
docs/: CMakeLists.txt  Doxyfile.in  conf.py  doxyindex.rst  index.rst
docs/source/: basics.rst  conf.py  config.rst  configfile.rst  datacontainers.rst  doxyindex.rst  gui.rst  guiconf.rst  index.rst  modelconf.rst
macos/: CMakeLists.txt  helpers.mm
macos/include/: helpers.h
tests/: CMakeLists.txt  test_Buffer.cpp  test_Wrapper.cpp
